[gd_scene load_steps=3 format=3 uid="uid://cdrqjrhwbo643"]

[ext_resource type="PackedScene" uid="uid://cy1f7nq6lt4d" path="res://Scenes/Enemies/Ghost.tscn" id="1_4e10c"]
[ext_resource type="Script" path="res://Scripts/Enemies/Vanishing Ghost.gd" id="2_fhwha"]

[node name="Vanishing Ghost" instance=ExtResource("1_4e10c")]
script = ExtResource("2_fhwha")

[node name="Sprite2D" parent="." index="0"]
modulate = Color(0.909804, 0.835294, 0.560784, 1)

[node name="InvisibilityDuration" type="Timer" parent="." index="3"]
wait_time = 6.0
one_shot = true

[node name="VisibilityDuration" type="Timer" parent="." index="4"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="InvisibilityDuration" to="." method="_on_invisibility_duration_timeout"]
[connection signal="timeout" from="VisibilityDuration" to="." method="_on_visibility_duration_timeout"]
